--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,11 @@ a:hover {
   color: #113c00;
 }
 
+.nav a:focus {
+  background-color: #fff;
+  color: #568c36;
+}
+
 .about {
   position: relative;
 }
